--- a/package.json
+++ b/package.json
@@ -5,12 +5,24 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "serve ."
+    "dev": "serve .",
+    "build": "webpack"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "serve": "^11.3.0"
+  },
+  "devDependencies": {
+    "prettier": "1.19.1",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   }
 }
