--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "devDependencies": {
     "husky": "^4.2.3",
+    "hyperscript": "^2.0.2",
     "lodash": "^4.17.15",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
