--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "husky": "^4.2.3",
     "hyperscript": "^2.0.2",
     "lodash": "^4.17.15",
+    "lozad": "^1.14.0",
     "moment": "^2.24.0",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
