--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "date-fns": "^2.12.0",
     "husky": "^4.2.3",
     "hyperscript": "^2.0.2",
     "lodash": "^4.17.15",
     "lozad": "^1.14.0",
-    "moment": "^2.24.0",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
     "serve": "^11.3.0",
