--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^3.5.2",
     "date-fns": "^2.12.0",
     "husky": "^4.2.3",
     "hyperscript": "^2.0.2",
@@ -30,6 +31,7 @@
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
     "serve": "^11.3.0",
+    "style-loader": "^1.1.4",
     "webpack": "^4.42.0",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
