--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hyperscript": "^2.0.2",
     "lodash": "^4.17.15",
     "lozad": "^1.14.0",
+    "modal-video": "^2.4.2",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
     "serve": "^11.3.0",
