--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -5,7 +5,7 @@ name: Performance Audit
 # Control: Ejecute la acción para cada Pull Request
 on:
   pull_request:
-    branches: [master]
+    branches: [lighthouse]
 
 jobs:
   lighthouse:
