--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -31,4 +31,5 @@ jobs:
           # nuestro propio servidor Node. Lee más en:
           # LHCLI options https://github.com/GoogleChrome/lighthouse-ci/blob/master/docs/cli.md
           # treosh/lg-ci-action options https://github.com/marketplace/actions/lighthouse-ci-action
+          urls: 'http://localhost:3000'
           configPath: './lighthouserc.json'
