--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -33,3 +33,4 @@ jobs:
           # treosh/lg-ci-action options https://github.com/marketplace/actions/lighthouse-ci-action
           urls: 'http://localhost:3000'
           configPath: './lighthouserc.json'
+          uploadArtifacts: true
