--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "modal-video": "^2.4.2",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
+    "puppeteer": "^3.0.4",
     "serve": "^11.3.0",
     "style-loader": "^1.1.4",
     "webpack": "^4.42.0",
