--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -27,8 +27,9 @@ jobs:
       - name: Audit with lighthouse CI
         uses: treosh/lighthouse-ci-action@v2
         with:
-          # Use nuestra configuracion de Lighthouse CI para correr
-          # nuestro propio servidor Node. Lee más en:
+          # Usa nuestra configuracion de Lighthouse CI para correr
+          # nuestro propio servidor Node y hacer login con Puppeteer.
+          # Lee más en:
           # LHCLI options https://github.com/GoogleChrome/lighthouse-ci/blob/master/docs/cli.md
           # treosh/lg-ci-action options https://github.com/marketplace/actions/lighthouse-ci-action
           runs: 1
